# django-slideshow

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
django1/: asgi.py  settings.py  urls.py  wsgi.py
django1/apps/core/: apps.py
django1/apps/slideshow/: admin.py  apps.py  models.py  schema.py  views.py
django1/apps/slideshow/migrations/: 0001_initial.py  0002_slideshow_slide_file_alter_event_slug.py  0003_rename_event_end_date_event_end_date_and_more.py  0004_alter_event_slug_alter_slideshow_slug.py  0005_slideshow_slide_file_upload_and_more.py  0006_remove_slideshow_slide_file_upload_and_more.py  0007_remove_slideshow_content_in_md_and_more.py  0008_alter_slideshow_featured.py  0009_alter_slideshow_featured.py  0010_remove_slideshow_featured.py  0011_slideshow_featured.py  0012_alter_slideshow_featured.py  0013_event_city_event_country_event_state.py  0014_event_presentation_video.py
django1/apps/slideshow/templates/slideshow/: event.html  events.html  index.html  slideshow_create.html  slideshows.html
django1/apps/slideshow/templates/slideshow/forms/: slideshow_form.html
django1/apps/slideshow/templates/slideshow/partials/: _base.html  _nav.html  _partial.html  event_detail.html
slidjo/: asgi.py  settings.py  urls.py  wsgi.py
slidjo/apps/slideshow/: admin.py  apps.py  forms.py  models.py  schema.py  urls.py
slidjo/apps/slideshow/migrations/: 0001_initial.py
slidjo/apps/slideshow/static/slideshow/css/: main.css
slidjo/apps/slideshow/templates/slideshow/: event_create.html  slide.html
slidjo/apps/slideshow/templates/slideshow/forms/: event_form.html
(+5 files in other folders)
