[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mario Munoz", email = "pythonbynight@gmail.com"},
]
dependencies = [
    "django>=4.1.1",
    "gunicorn>=20.1.0",
    "jinja2>=3.1.2",
    "django-render-block>=0.9.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.3",
    "django-debug-toolbar>=3.7.0",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
ignore_missing_imports_per_module = true
files = [
    "./django1"
]
